feat(gradle): automatically use jdk.incubator.vector